--- a/app/main/main.css
+++ b/app/main/main.css
@@ -1,5 +1,5 @@
 .main-container {
   width: 100%;
   padding: 1.5rem 2rem;
-  background-color: #A294F9;
+  background-color: rgb(162, 148, 249);
 }
