--- a/app/main/sidebar.css
+++ b/app/main/sidebar.css
@@ -9,11 +9,12 @@
 }
 .sidebar-aside {
   width: 288px;
-  background-color: rgb(255, 255, 255);
+  background-color: #F5EFFF;
   display: flex;
   flex-direction: column;
   justify-content: center;
   border-radius: 1rem;
+  box-shadow: 0px 0px 32px -10px rgba(0, 0, 0, 0.5);
 }
 .sidebar-title {
   font-size: 1.25rem;
@@ -57,7 +58,7 @@
   flex: 1;
   padding: 2rem;
   overflow-y: auto;
-  background-color: rgb(255, 255, 255);
+  background-color: transparent;
   border-radius: 1rem;
 }
 .sidebar-divider {
